--- a/templates/database.html
+++ b/templates/database.html
@@ -48,8 +48,9 @@
     <h2>Learning from your texts </h2>
     <div class="datatext">
       <p> Divided in 7 groups, here you can see how this algorithm is grouping all the text uploaded by users.
-        <br>Everyone can decide what content to teach and to remove to this machine.
-        <br> The clusters are made by the algorithm itself and change each time content is uploaded or deleted. </p>
+        <br>The clusters are fluid and made by the algorithm itself. They change each time content is uploaded or deleted. 
+        <br>These contents are used to create an alternative to the dataset showed previously by Google, leaving the ownership to users: 
+        <br>everyone can decide what content to teach and to remove to this machine. </p>
     </div>
   </div>
   <div class="data-container">
