--- a/templates/start.html
+++ b/templates/start.html
@@ -47,7 +47,7 @@
                 <div class="texteditor" style="border: 1px solid white;">
                     <div id="input" contenteditable="true" placeholder="Enter text here...">
                         <p>She didn't give you a lot of horse manure about what a great guy her father was. She probably knew
-                            what a phony slob he was.</p>
+                        what a phony slob he was.</p>
                     </div>
                 </div>
             </div>
@@ -56,170 +56,194 @@
                     In orange words closer to female, in purple to male.
                     <br>All of the following associations are embedded in our social networks, keyboards and translators.
                     <br>You can upload your text to generate a newer ai or check the database. </p>
-                <p class="explain"> Press on an highlighted word to see related. </p>
-                <div class="texteditor">
+                    <p class="explain"> Press on an highlighted word to see related. </p>
+                    <div class="texteditor">
 
-                    <p id="output">
-                        <p id="throbber">
-                            <span>.</span>
-                            <span>.</span>
-                            <span>.</span>
+                        <p id="output">
+                            <p id="throbber">
+                                <span>.</span>
+                                <span>.</span>
+                                <span>.</span>
+                            </p>
                         </p>
-                    </p>
+                    </div>
                 </div>
-            </div>
-
-        </div>
-
-        <div class="col2">
-            <p class="explain" id="write"> Analyse your text</p>
-
-            <div class="texteditor" style="background: none; padding-top: 0;">
-                <div class="centeralign">
-                    <button id="parse" onmousedown="loader()">Check</button>
-
-                </div>
-                <p id="shescore" class="she123" style="display: none"></p>
-                <p id="hescore" class="he123" style="display: none"></p>
 
             </div>
 
-        </div>
+            <div class="col2">
+                <p class="explain" id="write"> Analyse your text</p>
 
-        <div class="col3">
-            <div class="texteditor">
-                <div>
-                    <p id="associations">
-                    </p>
+                <div class="texteditor" style="background: none; padding-top: 0;">
+                    <div class="centeralign">
+                        <button id="parse" onmousedown="loader()">Check</button>
+
+                    </div>
+                    <p id="shescore" class="she123" style="display: none"></p>
+                    <p id="hescore" class="he123" style="display: none"></p>
+
+                </div>
+
+            </div>
+
+            <div class="col3">
+                <div class="texteditor">
+                    <div>
+                        <p id="associations">
+                        </p>
+                    </div>
                 </div>
             </div>
+            <div class="col4">
+                <div class="texteditor">
+                    <div>
+                        <p id="second_associations">
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col5">
+                <div class="texteditor">
+                    <div>
+                        <p id="third_associations">
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col6">
+                <p class="explain">Send us your text </p>
+
+                <p id="upload"> upload</p>
+
+                <p class="explain" style="display: inline-block"> Go check the database </p>
+                <p id="menu-data">
+                    <a href="{{ url_for('database') }}"> database</a>
+                </p>
+            </div>
         </div>
-    
-        <div class="col6">
-            <p class="explain">Send us your text </p>
+        <script>
+            $(document).ready(function () {
+                $('#elem1').css('color', 'white');
+                $('#elem1').css('background-color', 'black');
+                $('#elem2').css('color', 'black');
+                $('#elem2').css('background-color', 'white');
 
-            <p id="upload"> upload</p>
-
-            <p class="explain" style="display: inline-block"> Go check the database </p>
-            <p id="menu-data">
-                <a href="{{ url_for('database') }}"> database</a>
-            </p>
-        </div>
-    </div>
-    <script>
-        $(document).ready(function () {
-            $('#elem1').css('color', 'white');
-            $('#elem1').css('background-color', 'black');
-            $('#elem2').css('color', 'black');
-            $('#elem2').css('background-color', 'white');
-
-            if ($('.introtext').css('display') == 'block') {
-                $('.introtext').css('display', 'none');
-            }
-            if ($('.container').css('display') == 'none') {
-                $('.container').css('display', 'flex');
-            }
-
-
-            $("#parse").click(function () {
-                if ($('.before').css('display') == 'block') {
-                    $('.before').css('display', 'none');
-                }
-                if ($('.after').css('display') == 'none') {
-                    $('.after').css('display', 'block');
-                }
-                if ($('.col2').css('display') == 'block') {
-                    $('.col2').css('display', 'none');
-                }
-                if ($('.col3').css('display') == 'block') {
-                    $('.col3').css('display', 'none');
-                }
-                if ($('.secondpart').css('display') == 'none') {
-                    $('.secondpart').css('display', 'block');
-                }
                 if ($('.introtext').css('display') == 'block') {
                     $('.introtext').css('display', 'none');
                 }
-                if ($('#intro').css('display') == 'block') {
-                    $('#intro').css('display', 'none');
+                if ($('.container').css('display') == 'none') {
+                    $('.container').css('display', 'flex');
                 }
-                if ($('#upload').css('display') == 'none') {
-                    $('#upload').css('display', 'block');
-                }
-                $('#elem2').css('color', 'white');
-                $('#elem2').css('background-color', 'black');
-                $('#elem3').css('color', 'black');
-                $('#elem3').css('background-color', 'white');
+
+
+                $("#parse").click(function () {
+                    if ($('.before').css('display') == 'block') {
+                        $('.before').css('display', 'none');
+                    }
+                    if ($('.after').css('display') == 'none') {
+                        $('.after').css('display', 'block');
+                    }
+                    if ($('.col2').css('display') == 'block') {
+                        $('.col2').css('display', 'none');
+                    }
+                    if ($('.col3').css('display') == 'block') {
+                        $('.col3').css('display', 'none');
+                    }
+                    if ($('.secondpart').css('display') == 'none') {
+                        $('.secondpart').css('display', 'block');
+                    }
+                    if ($('.introtext').css('display') == 'block') {
+                        $('.introtext').css('display', 'none');
+                    }
+                    if ($('#intro').css('display') == 'block') {
+                        $('#intro').css('display', 'none');
+                    }
+                    if ($('#upload').css('display') == 'none') {
+                        $('#upload').css('display', 'block');
+                    }
+                    $('#elem2').css('color', 'white');
+                    $('#elem2').css('background-color', 'black');
+                    $('#elem3').css('color', 'black');
+                    $('#elem3').css('background-color', 'white');
+                });
+
+                $(".secondpart").click(function () {
+
+
+                    if ($('.col2').css('display') == 'none') {
+                        $('.col2').css('display', 'block');
+                    }
+                    if ($('.before').css('display') == 'none') {
+                        $('.before').css('display', 'block');
+                    }
+                    if ($('.after').css('display') == 'block') {
+                        $('.after').css('display', 'none');
+                    }
+
+                    if ($('.col3').css('display') == 'block') {
+                        $('.col3').css('display', 'none');
+                    }
+                    if ($('.col6').css('display') == 'block') {
+                        $('.col6').css('display', 'none');
+                    }
+
+                    if ($('.secondpart').css('display') == 'block') {
+                        $('.secondpart').css('display', 'none');
+                    }
+                    if ($('#intro').css('display') == 'block') {
+                        $('#intro').css('display', 'none');
+                    }
+                    $('#elem3').css('color', 'white');
+                    $('#elem3').css('background-color', 'black');
+                    $('#elem4').css('color', 'black');
+                    $('#elem4').css('background-color', 'white');
+                });
+
+                $("#output").click(function () {
+                    if ($('.col3').css('display') == 'none') {
+                        $('.col3').css('display', 'block');
+                    }
+                });
+                $("#associations").click(function () {
+                    if ($('.col4').css('display') == 'none') {
+                        $('.col4').css('display', 'flex');
+                    }
+                });
+                $("#second_associations").click(function () {
+                    if ($('.col5').css('display') == 'none') {
+                        $('.col5').css('display', 'flex');
+                    }
+                });
+
+
             });
 
-            $(".secondpart").click(function () {
+        </script>
 
+        <script>
+            var myVar;
 
-                if ($('.col2').css('display') == 'none') {
-                    $('.col2').css('display', 'block');
-                }
-                if ($('.before').css('display') == 'none') {
-                    $('.before').css('display', 'block');
-                }
-                if ($('.after').css('display') == 'block') {
-                    $('.after').css('display', 'none');
-                }
+            function loader() {
+                myVar = setTimeout(showPage, 8000);
+            }
 
-                if ($('.col3').css('display') == 'block') {
-                    $('.col3').css('display', 'none');
-                }
-                if ($('.col6').css('display') == 'block') {
-                    $('.col6').css('display', 'none');
-                }
+            function showPage() {
 
-                if ($('.secondpart').css('display') == 'block') {
-                    $('.secondpart').css('display', 'none');
-                }
-                if ($('#intro').css('display') == 'block') {
-                    $('#intro').css('display', 'none');
-                }
-                $('#elem3').css('color', 'white');
-                $('#elem3').css('background-color', 'black');
-                $('#elem4').css('color', 'black');
-                $('#elem4').css('background-color', 'white');
+                document.getElementById("throbber").style.display = "none";
+                document.getElementById("output").style.display = "block";
+            }
+        </script>
+
+        <script>
+
+            document.querySelector("div[contenteditable]").addEventListener("paste", function (e) {
+                e.preventDefault();
+                var text = e.clipboardData.getData("text/plain");
+                document.execCommand("insertText", false, text);
             });
 
-            $("#output").click(function () {
-                if ($('.col3').css('display') == 'none') {
-                    $('.col3').css('display', 'block');
-                }
-            });
+        </script>
 
+    </body>
 
-
-        });
-
-    </script>
-
-    <script>
-        var myVar;
-
-        function loader() {
-            myVar = setTimeout(showPage, 8000);
-        }
-
-        function showPage() {
-
-            document.getElementById("throbber").style.display = "none";
-            document.getElementById("output").style.display = "block";
-        }
-    </script>
-
-    <script>
-
-        document.querySelector("div[contenteditable]").addEventListener("paste", function (e) {
-            e.preventDefault();
-            var text = e.clipboardData.getData("text/plain");
-            document.execCommand("insertText", false, text);
-        });
-
-    </script>
-
-</body>
-
-</html>
+    </html>
